# Compare

./: .env  .env.example  Doc.docx  Lease_unstructured.json  Res_schema.json  lease_PyMy.json  llmsherpa.json  main.py  pymupdf.json  pyproject.toml  raw_min.json  requirements.txt  sam2.json  sample.json  sample1.json  sample2.json  sample_raw.json  shrepa_to_schema.json  unstructured.json
app/cli/: build_store.py
app/core/: config.py
app/models/: store.py
app/routers/: extraction.py  kg.py
app/schemas/: json_schema.py
app/services/: builder.py  kg.py  loaders.py  parsers.py  pdf_processor.py  text.py
app/services/adapters/: custom_json.py
app/utils/: ids.py
compare_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
