[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compare-app"  # name can be anything
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.5",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["app*"]
